--- a/word.html
+++ b/word.html
@@ -10,8 +10,33 @@
 </head>
 
 <body>
-    <h1>word count</h1>
-    <p> this is word count</p>
+    <h1>word and charecter counter</h1>
+    <textarea id="textbox" cols="30" rows="10"></textarea>
+    <p>
+        <span id="word">0</span> Word
+        <span id="char">0</span> charecter
+    </p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <script src="word.js"></script>
 </body>
 
